src/objects/T_Vehicle__c.object
<CustomObject>
    <fields>
        <fullName>Equipment__c</fullName>
        <label>Equipment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Serving_Locations__c</fullName>
        <label>Serving Locations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <externalId>true</externalId>
        <label>VIN</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Vehicle_Capacity__c</fullName>
        <label>Vehicle Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year_Make_Model__c</fullName>
        <label>Vehicle Year/Make/Model</label>
        <type>TextArea</type>
    </fields>
    <label>T_Vehicle</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>T_Vehicles</pluralLabel>
    <recordTypes>
        <fullName>ADH</fullName>
        <active>true</active>
        <label>ADH</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>